# ubuntu-live555-opencv-ffmpeg

./: CMakeLists.txt  README.md
include/: ffmpeg_h264.h  rtsp_client.h
src/: ffmpeg_h264.cpp  main.cpp  rtsp_client.cpp
